tests/integration/fail/comparison_le_number_bool.ncl
# test = 'error' 
#
# [metadata]
# error = 'EvalError::NAryPrimopTypeError'
1 < 2 < 3
